// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManagedSilence /> matches snapshot when collapsed 1`] = `
"
<div class=\\"card my-1 components-managed-silence w-100\\">
  <div class=\\"card-header rounded-0 border-bottom-0 px-2\\">
    <div class=\\"d-flex flex-row\\">
      <div class=\\"flex-shrink-0 flex-grow-0\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"bell-slash\\"
          class=\\"svg-inline--fa fa-bell-slash text-muted\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 640 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-87.5-68.6c.5-1.7 .7-3.5 .7-5.4c0-27.6-11-54.1-30.5-73.7L512 320c-20.5-20.5-32-48.3-32-77.3V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM160 242.7c0 29-11.5 56.8-32 77.3l-1.5 1.5C107 341 96 367.5 96 395.2c0 11.5 9.3 20.8 20.8 20.8H406.2L160 222.1v20.7zM384 448H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z\\"
          >
          </path>
        </svg>
      </div>
      <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
        <div class=\\"components-managed-silence-comment text-truncate overflow-hidden\\">
          Mocked Silence
        </div>
        <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
          <span class=\\"text-muted text-truncate overflow-hidden me-2\\">
            — me@example.com
          </span>
          <div class=\\"d-flex flex-row justify-content-end flex-grow-1\\">
            <span class=\\"badge bg-light components-label\\">
              Expires in 30 minutes
            </span>
          </div>
        </div>
      </div>
      <div class=\\"flex-shrink-0 flex-grow-0\\">
        <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
          <div class=\\" tooltip-trigger\\">
            <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
              123
            </span>
          </div>
          <span class=\\"badge components-label with-click\\">
            <svg
              aria-hidden=\\"true\\"
              focusable=\\"false\\"
              data-prefix=\\"fas\\"
              data-icon=\\"chevron-down\\"
              class=\\"svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer\\"
              role=\\"img\\"
              xmlns=\\"http://www.w3.org/2000/svg\\"
              viewbox=\\"0 0 448 512\\"
              style=\\"transition: transform 0.25s ease-in-out;\\"
            >
              <path
                fill=\\"currentColor\\"
                d=\\"M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"
              >
              </path>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"progress silence-progress mx-2 mb-1\\">
    <div
      class=\\"progress-bar bg-success\\"
      role=\\"progressbar\\"
      style=\\"width: 50%;\\"
      aria-valuenow=\\"50\\"
      aria-valuemin=\\"0\\"
      aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;

exports[`<ManagedSilence /> matches snapshot with expaned details 1`] = `
"
<div class=\\"card my-1 components-managed-silence w-100\\">
  <div class=\\"card-header rounded-0 border-bottom-0 px-2\\">
    <div class=\\"d-flex flex-row\\">
      <div class=\\"flex-shrink-0 flex-grow-0\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"bell-slash\\"
          class=\\"svg-inline--fa fa-bell-slash text-muted\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 640 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-87.5-68.6c.5-1.7 .7-3.5 .7-5.4c0-27.6-11-54.1-30.5-73.7L512 320c-20.5-20.5-32-48.3-32-77.3V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM160 242.7c0 29-11.5 56.8-32 77.3l-1.5 1.5C107 341 96 367.5 96 395.2c0 11.5 9.3 20.8 20.8 20.8H406.2L160 222.1v20.7zM384 448H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z\\"
          >
          </path>
        </svg>
      </div>
      <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
        <div class=\\"components-managed-silence-comment \\">
          Mocked Silence
        </div>
        <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
          <span class=\\"text-muted text-truncate overflow-hidden \\">
            — me@example.com
          </span>
        </div>
      </div>
      <div class=\\"flex-shrink-0 flex-grow-0\\">
        <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
          <div class=\\" tooltip-trigger\\">
            <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
              123
            </span>
          </div>
          <span class=\\"badge components-label with-click\\">
            <svg
              aria-hidden=\\"true\\"
              focusable=\\"false\\"
              data-prefix=\\"fas\\"
              data-icon=\\"chevron-down\\"
              class=\\"svg-inline--fa fa-chevron-down m-auto text-muted cursor-pointer\\"
              role=\\"img\\"
              xmlns=\\"http://www.w3.org/2000/svg\\"
              viewbox=\\"0 0 448 512\\"
              style=\\"transition: transform 0.25s ease-in-out;\\"
            >
              <path
                fill=\\"currentColor\\"
                d=\\"M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"
              >
              </path>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"card-body pt-0 px-2\\">
    <div class=\\"mt-1\\">
      <div class=\\"d-flex flex-fill flex-lg-row flex-column justify-content-between\\">
        <div class=\\"flex-shrink-1 flex-grow-1 mw-1p\\">
          <div>
            <span class=\\"badge px-1 me-1 components-label silence-detail\\">
              <svg
                aria-hidden=\\"true\\"
                focusable=\\"false\\"
                data-prefix=\\"fas\\"
                data-icon=\\"calendar-check\\"
                class=\\"svg-inline--fa fa-calendar-check fa-fw text-muted me-1\\"
                role=\\"img\\"
                xmlns=\\"http://www.w3.org/2000/svg\\"
                viewbox=\\"0 0 448 512\\"
              >
                <path
                  fill=\\"currentColor\\"
                  d=\\"M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zM329 305c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-95 95-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L329 305z\\"
                >
                </path>
              </svg>
              Started 30 minutes ago
            </span>
            <span class=\\"badge  px-1 me-1 components-label silence-detail\\">
              <svg
                aria-hidden=\\"true\\"
                focusable=\\"false\\"
                data-prefix=\\"fas\\"
                data-icon=\\"calendar-xmark\\"
                class=\\"svg-inline--fa fa-calendar-xmark fa-fw text-muted me-1\\"
                role=\\"img\\"
                xmlns=\\"http://www.w3.org/2000/svg\\"
                viewbox=\\"0 0 448 512\\"
              >
                <path
                  fill=\\"currentColor\\"
                  d=\\"M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zM305 305c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-47 47-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l47 47-47 47c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l47-47 47 47c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-47-47 47-47z\\"
                >
                </path>
              </svg>
              Expires in 30 minutes
            </span>
          </div>
          <div class=\\"my-1 d-flex flex-row\\">
            <span class=\\"badge px-1 me-1 components-label silence-detail flex-grow-0 flex-shrink-0\\">
              <svg
                aria-hidden=\\"true\\"
                focusable=\\"false\\"
                data-prefix=\\"fas\\"
                data-icon=\\"fingerprint\\"
                class=\\"svg-inline--fa fa-fingerprint fa-fw text-muted me-1\\"
                role=\\"img\\"
                xmlns=\\"http://www.w3.org/2000/svg\\"
                viewbox=\\"0 0 576 512\\"
              >
                <path
                  fill=\\"currentColor\\"
                  d=\\"M454.4 93c7.3 8.8 6.1 21.6-2 29.7c-10.6 10.6-28.2 8.6-38-2.7C376.2 75.9 319.9 48 257 48C142.1 48 49 141.1 49 256v24.9c0 6.1-.2 12.2-.6 18.3C47.7 311.2 37.6 320 25.6 320C11.1 320 .1 307 .7 292.5c.2-3.9 .3-7.7 .3-11.6V256C1 114.6 115.6 0 257 0c79.4 0 150.4 36.2 197.4 93zm19.3 89.6c13.1-6.5 29-.2 32.4 14.1c4.5 19.1 6.9 39 6.9 59.4v24.9c0 5.4-.1 10.9-.2 16.3C512.6 310 502 320 489.2 320c-13.7 0-24.6-11.5-24.4-25.3c.1-4.6 .1-9.2 .1-13.8V256c0-15.1-1.6-29.8-4.6-43.9c-2.5-11.8 2.5-24.2 13.3-29.6zM257 80c97.2 0 176 78.8 176 176v24.9c0 27.7-1.7 55.3-5 82.7c-1.4 11.7-11.5 20.3-23.3 20.3c-14.7 0-25.9-13.2-24.2-27.8c3-24.9 4.4-50.1 4.4-75.3V256c0-70.7-57.3-128-128-128c-11.6 0-22.8 1.5-33.4 4.4c-10.6 2.9-22.3 .4-29.4-7.9c-10.4-12.1-6.9-30.9 8.3-35.9C219.6 83 238 80 257 80zM151.7 148.7c8.2 9.6 7.5 23.8 .2 34.2C137.5 203.6 129 228.8 129 256v24.9c0 28.9-3.3 57.7-9.7 85.8C116.9 377 107.6 384 97.1 384c-15.9 0-27.3-15.6-23.9-31.1c5.2-23.6 7.8-47.7 7.8-71.9V256c0-40.6 13.7-78 36.8-107.7c8.5-11 24.8-10.2 33.9 .4zM257 160c53 0 96 43 96 96v24.9c0 39.7-3.9 79.3-11.6 118.1c-2 10-10.8 17-21 17c-14.2 0-24.5-13.3-21.8-27.2c6.9-35.5 10.4-71.6 10.4-107.9V256c0-28.7-23.3-52-52-52s-52 23.3-52 52v24.9c0 40.5-5.3 80.7-15.9 119.7c-2.5 9.2-10.9 15.4-20.4 15.4c-14.8 0-25.3-14.6-21.5-29c9.1-34.6 13.8-70.2 13.8-106.1V256c0-53 43-96 96-96zm24 96v24.9c0 65.8-12.1 131-35.7 192.4l-5.9 15.3c-4.8 12.4-18.6 18.5-31 13.8s-18.5-18.6-13.8-31l5.9-15.3C222 400.2 233 340.8 233 280.9V256c0-13.3 10.7-24 24-24s24 10.7 24 24z\\"
                >
                </path>
              </svg>
              ID:
            </span>
            <span class=\\"badge bg-light px-1 me-1 components-label silence-id\\">
              04d37636-2350-4878-b382-e0b50353230f
            </span>
            <div class=\\" tooltip-trigger\\">
              <span class=\\"badge bg-secondary px-1 me-1 components-label cursor-pointer\\">
                <svg
                  aria-hidden=\\"true\\"
                  focusable=\\"false\\"
                  data-prefix=\\"fas\\"
                  data-icon=\\"copy\\"
                  class=\\"svg-inline--fa fa-copy \\"
                  role=\\"img\\"
                  xmlns=\\"http://www.w3.org/2000/svg\\"
                  viewbox=\\"0 0 512 512\\"
                >
                  <path
                    fill=\\"currentColor\\"
                    d=\\"M224 0c-35.3 0-64 28.7-64 64V288c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H224zM64 160c-35.3 0-64 28.7-64 64V448c0 35.3 28.7 64 64 64H288c35.3 0 64-28.7 64-64V384H288v64H64V224h64V160H64z\\"
                  >
                  </path>
                </svg>
              </span>
            </div>
          </div>
          <div class=\\"my-1\\">
            <span class=\\"badge px-1 me-1 components-label silence-detail\\">
              <svg
                aria-hidden=\\"true\\"
                focusable=\\"false\\"
                data-prefix=\\"fas\\"
                data-icon=\\"house\\"
                class=\\"svg-inline--fa fa-house fa-fw text-muted me-1\\"
                role=\\"img\\"
                xmlns=\\"http://www.w3.org/2000/svg\\"
                viewbox=\\"0 0 576 512\\"
              >
                <path
                  fill=\\"currentColor\\"
                  d=\\"M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z\\"
                >
                </path>
              </svg>
              View in Alertmanager:
            </span>
            <a
              href=\\"http://example.com/#/silences/04d37636-2350-4878-b382-e0b50353230f\\"
              target=\\"_blank\\"
              rel=\\"noopener noreferrer\\"
              class=\\"components-label components-label-with-hover badge border components-grid-annotation-link\\"
            >
              <svg
                aria-hidden=\\"true\\"
                focusable=\\"false\\"
                data-prefix=\\"fas\\"
                data-icon=\\"up-right-from-square\\"
                class=\\"svg-inline--fa fa-up-right-from-square \\"
                role=\\"img\\"
                xmlns=\\"http://www.w3.org/2000/svg\\"
                viewbox=\\"0 0 512 512\\"
              >
                <path
                  fill=\\"currentColor\\"
                  d=\\"M352 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9L370.7 96 201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L416 141.3l41.4 41.4c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V32c0-17.7-14.3-32-32-32H352zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z\\"
                >
                </path>
              </svg>
              am1
            </a>
          </div>
          <div class=\\"d-flex flex-row\\">
            <div class=\\"flex-shrink-0 flex-grow-0\\">
              <span class=\\"badge px-1 me-1 components-label silence-detail\\">
                <svg
                  aria-hidden=\\"true\\"
                  focusable=\\"false\\"
                  data-prefix=\\"fas\\"
                  data-icon=\\"filter\\"
                  class=\\"svg-inline--fa fa-filter fa-fw text-muted me-1\\"
                  role=\\"img\\"
                  xmlns=\\"http://www.w3.org/2000/svg\\"
                  viewbox=\\"0 0 512 512\\"
                >
                  <path
                    fill=\\"currentColor\\"
                    d=\\"M3.9 54.9C10.5 40.9 24.5 32 40 32H472c15.5 0 29.5 8.9 36.1 22.9s4.6 30.5-5.2 42.5L320 320.9V448c0 12.1-6.8 23.2-17.7 28.6s-23.8 4.3-33.5-3l-64-48c-8.1-6-12.8-15.5-12.8-25.6V320.9L9 97.3C-.7 85.4-2.8 68.8 3.9 54.9z\\"
                  >
                  </path>
                </svg>
                Matchers:
              </span>
            </div>
            <div
              class=\\"flex-shrink-1 flex-grow-1 mw-1p\\"
              style=\\"min-width: 0px;\\"
            >
              <span class=\\"badge silence-matcher-equal px-1 me-1 components-label\\">
                regex=~\\"equal\\"
              </span>
              <span class=\\"badge silence-matcher-negative px-1 me-1 components-label\\">
                regex!~\\"notEqual\\"
              </span>
              <span class=\\"badge silence-matcher-equal px-1 me-1 components-label\\">
                notRegex=\\"equal\\"
              </span>
              <span class=\\"badge silence-matcher-negative px-1 me-1 components-label\\">
                notRegex!=\\"notEqual\\"
              </span>
            </div>
          </div>
        </div>
        <div class=\\"flex-shrink-0 flex-grow-0 mt-lg-0 mt-2 ml-lg-2 ms-0\\">
          <div class=\\"d-flex flex-fill flex-lg-column flex-row justify-content-around\\">
            <button class=\\"btn btn-primary btn-sm mb-lg-2 mb-0\\">
              <svg
                aria-hidden=\\"true\\"
                focusable=\\"false\\"
                data-prefix=\\"fas\\"
                data-icon=\\"pen-to-square\\"
                class=\\"svg-inline--fa fa-pen-to-square me-1 d-none d-sm-inline-block\\"
                role=\\"img\\"
                xmlns=\\"http://www.w3.org/2000/svg\\"
                viewbox=\\"0 0 512 512\\"
              >
                <path
                  fill=\\"currentColor\\"
                  d=\\"M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.8 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z\\"
                >
                </path>
              </svg>
              Edit
            </button>
            <button class=\\"btn btn-danger btn-sm\\">
              <svg
                aria-hidden=\\"true\\"
                focusable=\\"false\\"
                data-prefix=\\"fas\\"
                data-icon=\\"trash\\"
                class=\\"svg-inline--fa fa-trash me-1 d-none d-sm-inline-block\\"
                role=\\"img\\"
                xmlns=\\"http://www.w3.org/2000/svg\\"
                viewbox=\\"0 0 448 512\\"
              >
                <path
                  fill=\\"currentColor\\"
                  d=\\"M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z\\"
                >
                </path>
              </svg>
              Delete
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"progress silence-progress mx-2 mb-1\\">
    <div
      class=\\"progress-bar bg-success\\"
      role=\\"progressbar\\"
      style=\\"width: 50%;\\"
      aria-valuenow=\\"50\\"
      aria-valuemin=\\"0\\"
      aria-valuemax=\\"100\\"
    >
    </div>
  </div>
</div>
"
`;
